# pvp_serve

./: .env.example  .gitmodules  README.md  pyproject.toml
app/: chat.py  config.py  contract.py  god_path.py  main.py  session.py  structured.py
deploy/: Caddyfile  champion-sglang.service  pvp-serve.service
docs/: NODE_SETUP.md
scripts/: merge_champion.py  run.sh  serve_sglang.sh
tests/: smoke.py
